SERVER-34120 call done() in SessionsCollectionRS

We make connections from the secondaries to the primary that we fail to
call done() on.  This causes those connections to fall out of the pool,
reducing connection pooling and producing worrisome log messages.